--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx8g -Xms8g
+kotlin.daemon.jvmargs=-Xmx2g -Xms2g
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g
