--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,11 +17,16 @@ jobs:
           java-version: 21
       - name: Build Dokka HTML
         run: ./gradlew dokkaHtmlMultiModule
-      - name: Add CNAME file
-        run: echo 'kdriver.dev' > build/dokka/htmlMultiModule/CNAME
+      - name: Setup docs folder
+        run: |
+          mkdir -p build/docs
+          mkdir -p build/docs/api
+          cp -r build/dokka/htmlMultiModule/* build/docs/api
+          cp -r docs/* build/docs
+          echo 'kdriver.dev' > build/docs/CNAME
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/dokka/htmlMultiModule
+          publish_dir: build/docs
           publish_branch: gh-pages
