--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: kdriver documentation
-repository: guimauvedigital/kdriver
+repository: cdpdriver/kdriver
 
 theme: just-the-docs
 color_scheme: dark
