--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-kotlin = "2.1.21"
+kotlin = "2.3.0"
 kover = "0.8.3"
 detekt = "1.23.8"
 dokka = "2.0.0"
-ksp = "2.1.21-2.0.2"
+ksp = "2.3.4"
 maven = "0.30.0"
-ktor = "3.1.3"
+ktor = "3.4.0"
 mockk = "1.13.12"
 jsoup = "1.16.2"
 kotlinx-coroutines = "1.10.2"
